samples/_failures_safe/1761337091_461595_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a542632d.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_a542632d.c:171:16: error: missing terminating " character
  171 |         printf("Line %d, Column %d:
      |                ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a542632d.c:171:9: error: expected expression at end of input
  171 |         printf("Line %d, Column %d:
      |         ^~~~~~
./samples/SAFE/__tmp_a542632d.c:171:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a542632d.c:171:9: error: expected declaration or statement at end of input
